# advent-of-code-2020

./: README.org  aoc.cabal  apply_changes.zsh
app/: Main.hs
src/: Prelude.hs
src/Days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
tests/: Test.hs
tests/Days/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day20Spec.hs  Day21Spec.hs  Day22Spec.hs  Day23Spec.hs  Day24Spec.hs  Day25Spec.hs
