cabal-version:      3.0
name:               aoc
version:            0.1.0.0
description:        Advent of code 2020

-- homepage:       https://github.com/samcoy3/advent-of-code-template#readme
-- bug-reports:    https://github.com/samcoy3/advent-of-code-template/issues
author:             Joseph Morag
maintainer:         jm@josephmorag.com
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

common shared
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveFoldable
    DeriveFunctor
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications

  build-depends:
    , attoparsec
    , base-noprelude      >=4.7 && <5
    , bytestring
    , containers
    , directory
    , parser-combinators
    , pointedlist
    , raw-strings-qq
    , relude
    , text
    , vector

library
  import:          shared
  exposed-modules:
    Days.Day01
    Days.Day02
    Days.Day03
    Days.Day04
    Days.Day05
    Days.Day06
    Days.Day07
    Days.Day08
    Days.Day09
    Days.Day10
    Days.Day11
    Days.Day12
    Days.Day13
    Days.Day14
    Days.Day15
    Days.Day16
    Days.Day17
    Days.Day18
    Days.Day19
    Days.Day20
    Days.Day21
    Days.Day22
    Days.Day23
    Days.Day24
    Days.Day25
    Prelude

  hs-source-dirs:  src

executable aoc
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aoc
    , optparse-applicative

test-suite specs
  import:             shared
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Days.Day01Spec
    Days.Day02Spec
    Days.Day03Spec
    Days.Day04Spec
    Days.Day05Spec
    Days.Day06Spec
    Days.Day07Spec
    Days.Day08Spec
    Days.Day09Spec
    Days.Day10Spec
    Days.Day11Spec
    Days.Day12Spec
    Days.Day13Spec
    Days.Day14Spec
    Days.Day15Spec
    Days.Day16Spec
    Days.Day17Spec
    Days.Day18Spec
    Days.Day19Spec
    Days.Day20Spec
    Days.Day21Spec
    Days.Day22Spec
    Days.Day23Spec
    Days.Day24Spec
    Days.Day25Spec
    Test

  default-extensions: QuasiQuotes
  hs-source-dirs:     tests
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aoc
    , hspec

  build-tool-depends: hspec-discover:hspec-discover ==2.*
